--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,7 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
         "menarasolutions/geographer": "^0.3.8",
-        "pusher/pusher-php-server": "~3.0",
-        "tcg/voyager": "^1.3"
+        "pusher/pusher-php-server": "~3.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
@@ -67,11 +66,5 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ]
-    },
-    "repositories": {
-        "hooks": {
-            "type": "composer",
-            "url": "https://larapack.io"
-        }
     }
 }
